--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: npm ci --force
+      run: npm i --force
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps --force
     - name: Run Playwright tests
